linuxmuster-cachingserver-satellite (1.1.6-0) lmn72-testing; urgency=low

  * Switch to rsync on server side, so client have to be the same
  * Update api

 -- Lukas Spitznagel <lukas.spitznagel@netzint.de>  Thu, 19 Sep 2023 17:28:00 +0200

linuxmuster-cachingserver-satellite (1.1.5-0) lmn72-testing; urgency=low

  * Fix some problemes
  * Fix error in dhcp config

 -- Lukas Spitznagel <lukas.spitznagel@netzint.de>  Thu, 19 Sep 2023 17:28:00 +0200

linuxmuster-cachingserver-satellite (1.1.4-0) lmn72-testing; urgency=low

  * Add multithreading in api

 -- Lukas Spitznagel <lukas.spitznagel@netzint.de>  Thu, 07 Sep 2023 17:28:00 +0200

linuxmuster-cachingserver-satellite (1.1.3-0) lmn72-testing; urgency=low

  * Fix somes bugs

 -- Lukas Spitznagel <lukas.spitznagel@netzint.de>  Fri, 01 Sep 2023 17:28:00 +0200

linuxmuster-cachingserver-satellite (1.1.2-0) lmn72-testing; urgency=low

  * Add new server / client system with modules and API

 -- Lukas Spitznagel <lukas.spitznagel@netzint.de>  Thu, 31 Aug 2023 17:28:00 +0200

linuxmuster-cachingserver-satellite (1.1.1-0) lmn72-testing; urgency=low

  * Fix error in md5 compare

 -- Lukas Spitznagel <lukas.spitznagel@netzint.de>  Wed, 23 Aug 2023 17:28:00 +0200

linuxmuster-cachingserver-satellite (1.1.0-0) lmn72-testing; urgency=low

  * fix bug in client

 -- Lukas Spitznagel <lukas.spitznagel@netzint.de>  Tue, 1 Auf 2023 17:28:00 +0200

linuxmuster-cachingserver-satellite (1.0.9-0) lmn72-testing; urgency=low

  * add posthook and filecheck feature

 -- Lukas Spitznagel <lukas.spitznagel@netzint.de>  Tue, 1 Auf 2023 17:28:00 +0200

linuxmuster-cachingserver-satellite (1.0.8-0) lmn72-testing; urgency=low

  * new version

 -- Lukas Spitznagel <lukas.spitznagel@netzint.de>  Tue, 1 Auf 2023 17:28:00 +0200

linuxmuster-cachingserver-satellite (1.0.7-0) lmn72-testing; urgency=low

  * new version

 -- Lukas Spitznagel <lukas.spitznagel@netzint.de>  Tue, 1 Auf 2023 17:28:00 +0200
